--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.1.0",
   "description": "Build and deploy @marko/run apps to Cloudflare Pages",
   "license": "MIT",
-  "homepage": "https://github.com/marko-js/run/tree/main/packages/adapters/node",
-  "logo": {
-    "url": "https://github.com/marko-js/run/raw/main/assets/marko-run.png"
-  },
+  "homepage": "https://github.com/mpeg/marko-run-adapter-cloudflare-pages",
   "repository": {
     "type": "git",
-    "url": "https://github.com/marko-js/run.git"
+    "url": "https://github.com/mpeg/marko-run-adapter-cloudflare-pages.git"
   },
   "author": "Marcos Perona <mperona@gmail.com>",
   "keywords": [
