--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,8 +19,8 @@ jobs:
               with:
                   node-version: 18
                   registry-url: https://npm.pkg.github.com/
-            - run: yarn install
-            - run: yarn run build
-            - run: yarn publish
+            - run: npm install
+            - run: npm run build
+            - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
